# rna-map-optimization

./: .gitignore  EXTRACTION_SUMMARY.md  INSTALL.md  README.md  environment.yml  pyproject.toml
.github/workflows/: test.yml
config/: PARAMETERS.md  README.md  optimization_config.yml
containers/: BUILD.md  Dockerfile  build_optimization_container.sh  rna-map-optimization.def
docs/: ALIGNMENT_VERIFICATION.md  BOWTIE2_PARAMETERS.md  BUILD_ON_CLUSTER.md  README.md  VIEW_ALIGNMENTS.md
docs/archive/: EXTRACTION_SUMMARY.md
scripts/: README.md  analyze_common_sequences.py  example_container_minimal.sh  example_sbatch_container.sh  optimize_bowtie2_params.py  optimize_bowtie2_params_optuna.py  run_baseline_test.py  verify_alignments.py  view_alignments.py
scripts/cluster/: submit_optimization_jobs.sh
scripts/container/: CONTAINER_USAGE.md  README.md  USE_CONTAINER.md  build_with_docker.sh  rna-map-optimization.def
src/rna_map_optimization/: __init__.py  bowtie2.py  cli.py  comprehensive_analysis.py  config_loader.py  optimizer.py  utils.py
test_results/case_1/: optuna_summary.csv
test_results/case_1/results/trial_10/: bowtie2_stderr.txt
test_results/case_1/results/trial_100/: bowtie2_stderr.txt
test_results/case_1/results/trial_114/: bowtie2_stderr.txt
test_results/case_1/results/trial_115/: bowtie2_stderr.txt
test_results/case_1/results/trial_116/: bowtie2_stderr.txt
test_results/case_1/results/trial_119/: bowtie2_stderr.txt
test_results/case_1/results/trial_127/: bowtie2_stderr.txt
test_results/case_1/results/trial_128/: bowtie2_stderr.txt
test_results/case_1/results/trial_13/: bowtie2_stderr.txt
test_results/case_1/results/trial_130/: bowtie2_stderr.txt
test_results/case_1/results/trial_136/: bowtie2_stderr.txt
test_results/case_1/results/trial_137/: bowtie2_stderr.txt
test_results/case_1/results/trial_14/: bowtie2_stderr.txt
test_results/case_1/results/trial_140/: bowtie2_stderr.txt
test_results/case_1/results/trial_148/: bowtie2_stderr.txt
test_results/case_1/results/trial_150/: bowtie2_stderr.txt
test_results/case_1/results/trial_154/: bowtie2_stderr.txt
(+174 files in other folders)
